--- a/django/alunos/templates/partials/footer.html
+++ b/django/alunos/templates/partials/footer.html
@@ -7,8 +7,8 @@
             <div class="col-12 h-100 d-flex flex-wrap align-items-center justify-content-between">
                 <!-- Footer Social Info -->
                 <div class="footer-social-info text-right">
-                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="https://facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                 </div>
                 <!-- Footer Logo -->
                 <div class="footer-logo">
