--- a/django/alunos/templates/partials/menu.html
+++ b/django/alunos/templates/partials/menu.html
@@ -23,8 +23,8 @@
                 <!-- Top Social Info -->
                 <div class="col-12 col-sm-6">
                     <div class="top-social-info text-right">
-                        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="https://facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,6 @@
                         <div class="classynav">
                             <ul>
                                 <li><a href="{% url 'index' %}">Home</a></li>
-                                <li><a href="{% url 'aluno' %}">Desenvolvedores</a></li>
                             </ul>
 
                             <!-- Newsletter Form -->
